plugins/plugin-core-support/web/css/text-search.css
body.search-bar-is-visible .header .application-icon {
    /* shink the application icon when the search bar is visible */
    top: 0.4em;
    width: 2em;
    height: 2em;
}

#search-bar {
    bottom: 0px;
    width: 100%;
    opacity: 0;
    transition: all 150ms ease-in-out;

    /* so that it doesn't alter the layout flow until visible */
    position: absolute;

    /* we don't want the search bar to occlude mouse clicks etc. until it
   is visible; at that point (see the CSS below) we will adjust the
   z-index appropriately */
    z-index: -1000;
}
#search-bar.visible {
    opacity: 1;

    /* once visible, we want the search bar to flow normally */
    position: unset;

    /* continuing from above, here we adjust the z-index */
    z-index: 0;
}
#search-container {
    font-family: var(--font-san-serif);
    padding: 1ex;
    background: var(--color-stripe-01);
    font-size: 0.875rem;
    display: flex;
    align-items: center;
}
#search-input-container {
    flex: 1;
    background: var(--color-ui-01);
    border: solid 1px rgba(0,0,0,0.5);
    border-radius: 3px / 6px;
    padding: 1ex;
    margin-right: 1ex;
    display: flex;
    align-items: center;
}
#search-input {
    flex: 1;
    border: none;
    font-size: inherit;
}
#search-input:focus {
    outline:none;
}
#search-found-text {
    font-weight: 100;
    color: var(--color-brand-03);
}
#search-close-button {
    color: var(--color-ui-05);
    transition: all 300ms ease-in-out;
    font-size: 1.5em;
}
#search-close-button:hover {
    color: var(--color-ui-02);
    cursor: pointer;
}
#search-found-text.no-search-yet {
    color: var(--color-text-02);
    font-size: 0.75rem;
}

